Working treeTableView now has problems worked out and ready to integrate with project